<resources>

    <string name="app_name">Whistle</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_random">Random generator</string><string name="title_activity_menu">Select generator</string>
    <string name="min_time">Min</string>
    <string name="max_time">Max</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="random">Random</string>
    <string name="period">Period</string>
    <string name="cycle">Cycle</string>
    <string name="title_activity_period">Period generator</string>
    <string name="active">Active</string>
    <string name="rest">Rest</string>
    <string name="title_activity_cycle">Cycle generator</string>
    <string name="admob_id">a150238fc7e55c8</string>

</resources>