<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/linearLayoutMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random" />

    <Button
        android:id="@+id/buttonPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period" />

    <Button
        android:id="@+id/buttonCycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cycle" />

    <android.support.v7.widget.Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.73"
        android:orientation="vertical" >

    </LinearLayout>

    <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_id" >
    </com.google.ads.AdView>

</LinearLayout>